<resources>

    <string name="action_change_config">Change headset config</string>
    <string name="action_oad">Upgrade firmware</string>
    <string name="action_filter">Change filters</string>
    <string name="action_mtu">Change MTU</string>
    <string name="action_ampGain">Change Gain</string>
    <string name="action_getAfeConfig">Get Analog Frontend config</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quality">Q</string>

    <string-array name="spinner_timer">
        <item>sec</item>
        <item>min</item>
        <item>hours</item>
    </string-array>

</resources>